--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,7 +9,7 @@
     @apply hover:underline cursor-pointer;
   }
 
-  .selected {
+  .seleected {
     @apply bg-primaryColor px-5 py-2 text-white text-xs rounded-md cursor-pointer;
   }
 }
